ci: Rework version and releaseing
A release is now triggered from the GitHub action. This defines the version. For local snapshots, a generated version is used.